--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
                 <div class="bet-amount">
                     <label for="bet-input">Bet Amount:</label>
                     <input type="number" id="bet-input" value="10" min="1">
-                    <button id="place-bet">Place Bet</button>
                 </div>
                 <div class="bet-options">
-                    <button class="bet-option" data-color="red">Red</button>
-                    <button class="bet-option" data-color="black">Black</button>
-                    <button class="bet-option" data-color="green">Green</button>
+                    <button class="bet-option red" data-color="red">Red</button>
+                    <button class="bet-option black" data-color="black">Black</button>
+                    <button class="bet-option green" data-color="green">Green</button>
                 </div>
             </section>
 
