--- a/index.html
+++ b/index.html
@@ -41,9 +41,18 @@
                     <input type="number" id="bet-input" value="10" min="1">
                 </div>
                 <div class="bet-options">
-                    <button class="bet-option red" data-color="red">Red</button>
-                    <button class="bet-option black" data-color="black">Black</button>
-                    <button class="bet-option green" data-color="green">Green</button>
+                    <div class="bet-option-container">
+                        <button class="bet-option red" data-color="red">Red</button>
+                        <div class="bet-display" id="red-display"></div>
+                    </div>
+                    <div class="bet-option-container">
+                        <button class="bet-option black" data-color="black">Black</button>
+                        <div class="bet-display" id="black-display"></div>
+                    </div>
+                    <div class="bet-option-container">
+                        <button class="bet-option green" data-color="green">Green</button>
+                        <div class="bet-display" id="green-display"></div>
+                    </div>
                 </div>
             </section>
 
