--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSGO Roulette</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <!-- Header -->
         <header>
             <h1>CSGO Roulette</h1>
-            <div class="balance-box">
-                <i class="fas fa-coins"></i>
+            <div class="balance">
+                <span>Coins: </span>
                 <span id="balance">1000</span>
             </div>
         </header>
