--- a/index.html
+++ b/index.html
@@ -41,18 +41,9 @@
                     <input type="number" id="bet-input" value="10" min="1">
                 </div>
                 <div class="bet-options">
-                    <div class="bet-option-container">
-                        <button class="bet-option red" data-color="red">Red</button>
-                        <div class="bet-display" id="red-display"></div>
-                    </div>
-                    <div class="bet-option-container">
-                        <button class="bet-option black" data-color="black">Black</button>
-                        <div class="bet-display" id="black-display"></div>
-                    </div>
-                    <div class="bet-option-container">
-                        <button class="bet-option green" data-color="green">Green</button>
-                        <div class="bet-display" id="green-display"></div>
-                    </div>
+                    <button class="bet-option red" data-color="red">Red</button>
+                    <button class="bet-option black" data-color="black">Black</button>
+                    <button class="bet-option green" data-color="green">Green</button>
                 </div>
             </section>
 
@@ -63,6 +54,9 @@
                     <!-- Results will be added dynamically -->
                 </div>
             </section>
+
+            <!-- Notification System -->
+            <div id="notification"></div>
         </main>
     </div>
 
