--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <header>
             <h1>CSGO Roulette</h1>
             <div class="balance">
+                <img src="coin-icon.png" alt="Coins" class="coin-icon">
                 <span>Coins: </span>
                 <span id="balance">1000</span>
             </div>
